<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="logo"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </LinearLayout>

            <TextView
                android:id="@+id/tv_success_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/normal_button_selector"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/deep_gray"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_bottom1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/language"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_bottom2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_bottom1"
                android:text="@string/internet"
                android:textColor="@drawable/text_color_selector"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_bottom3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/heating"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_bottom4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/location"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_bottom5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/temperature"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>