<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="right"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="120dp"
                android:contentDescription="logo"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/edittext_selector"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="5dip"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dip"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_selector"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="5dip"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="5dip"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/normal_button_selector"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="left" >


                    <Button
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="left"
                        android:background="#00000000"
                        android:drawableLeft="@drawable/back_green"
                        android:text="Back"
                        android:textColor="@drawable/green_selector"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="left" >

                    <Button
                        android:id="@+id/btn_forgot_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="right"
                        android:background="#00000000"
                        android:drawableRight="@drawable/next_grey"
                        android:text="Forgot Password?"
                        android:textColor="@drawable/grey_selector"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/deep_gray"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_bottom1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/language"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_bottom2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_bottom1"
                android:text="@string/internet"
                android:textColor="@drawable/text_color_selector"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_bottom3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/heating"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_bottom4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/location"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_bottom5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_bottom1"
            android:text="@string/temperature"
            android:textColor="@drawable/text_color_selector"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>